crates/math-core/tests/snapshots/conversion_test__log_in_big.snap
---
source: crates/math-core/tests/conversion_test.rs
expression: "\\bigl(\\log\\bigr) + \\big(\\log\\big)"
---
<math>
    <mo minsize="1.2em" maxsize="1.2em">(</mo>
    <mrow>
        <mrow><mspace/><mi>log</mi></mrow>
        <mo lspace="0">⁡</mo>
        <mrow>
            <mo minsize="1.2em" maxsize="1.2em">)</mo>
            <mo>+</mo>
            <mo minsize="1.2em" maxsize="1.2em">(</mo>
            <mrow>
                <mrow><mspace/><mi>log</mi></mrow>
                <mo lspace="0.1667em">⁡</mo>
                <mo minsize="1.2em" maxsize="1.2em">)</mo>
            </mrow>
        </mrow>
    </mrow>
</math>
