crates/math-core/tests/snapshots/conversion_test__sin_plus_cos.snap
---
source: crates/math-core/tests/conversion_test.rs
expression: "\\sin + \\cos"
---
<math>
    <mrow>
        <mrow><mspace/><mi>sin</mi></mrow>
        <mo lspace="0.1667em">⁡</mo>
        <mrow>
            <mo lspace="0" rspace="0">+</mo>
            <mo lspace="0.1667em" rspace="0">cos</mo>
        </mrow>
    </mrow>
</math>
